fix(icon.module.css): align center icon  + text

--- a/src/features/shared/components/iconAction/icon.module.css
+++ b/src/features/shared/components/iconAction/icon.module.css
@@ -2,3 +2,14 @@
     background-color: transparent;
     border: none;
 }
+
+.iconAction {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+}
+
+.iconAction svg {
+  display: block;
+}
